--- a/css/main.css
+++ b/css/main.css
@@ -254,10 +254,10 @@ h2 {
 **************************/
 
 #explore {
-  background-color: #C34C39;
+  background-color: #ffffff;
   background-image: url("../images/event-bg.jpg");
   background-position: center bottom;
-  background-size: contain;
+ 
   background-repeat:no-repeat;
   position: relative;
   overflow: hidden;
