--- a/css/main.css
+++ b/css/main.css
@@ -394,8 +394,7 @@ h2 {
   background-color: #33888F;
   background-image: url("../images/performar-bg.jpg");
   background-position: 50% 0;
-  background-size: contain;
-  position: relative;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
