--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ a {
   transition: 300ms;
 }
 
-a:focus, 
+a:focus,
 a:hover {
   text-decoration: none;
   outline: none
@@ -51,7 +51,7 @@ h2 {
   background-color: #fff;
 }
 
-.navbar-toggle, 
+.navbar-toggle,
 .navbar-toggle:focus {
   border:1px solid #fff;
   outline: none;
@@ -72,9 +72,10 @@ h2 {
   position: absolute;
   width: 100%;
   z-index: 999;
+  background-color:white;
 }
 
-.main-nav 
+.main-nav
 .container {
   width: 100%
 }
@@ -82,7 +83,7 @@ h2 {
 .social-icons a {
   font-size: 18px;
   color: #fff;
-  padding-left:20px;  
+  padding-left:20px;
 }
 
 .social-icons .fa-facebook:hover {
@@ -129,8 +130,8 @@ h2 {
   font-weight: 300;
 }
 
-.navbar-right li a:hover, 
-.navbar-right li a:focus,  
+.navbar-right li a:hover,
+.navbar-right li a:focus,
 .navbar-right .active a {
   background-color: #fff;
   color: #000000
@@ -186,7 +187,7 @@ h2 {
   width: 100%
 }
 
-#main-slider 
+#main-slider
 .carousel-caption {
   background: none repeat scroll 0 0 #000000;
   bottom: 35%;
@@ -200,34 +201,34 @@ h2 {
 }
 
 
-#main-slider 
-.carousel-caption h2 {  
+#main-slider
+.carousel-caption h2 {
   font-size: 38px;
- 
+
 }
 
-#main-slider 
+#main-slider
 .carousel-caption h4 {
   font-size: 24px;
 }
 
-#main-slider 
+#main-slider
 .carousel-caption a {
   font-size: 22px;
   color: #2da1c5
 }
 
-#main-slider 
+#main-slider
 .carousel-caption a:hover {
   color: #2588a6
 }
 
-#main-slider 
+#main-slider
 .carousel-caption a:hover i {
   margin-left: 35px
 }
 
-#main-slider 
+#main-slider
 .carousel-caption a i {
   margin-left: 15px;
   -webkit-transition: all 0.3s ease-in-out;
@@ -237,13 +238,13 @@ h2 {
   transition: all 0.3s ease-in-out;
 }
 
-#main-slider 
+#main-slider
 .carousel-indicators li {
   background-color:#1B7B98;
   border: 1px solid #1B7B98;
 }
 
-#main-slider 
+#main-slider
 .carousel-indicators li.active {
   background-color:#fff;
   border: 1px solid #fff;
@@ -257,7 +258,7 @@ h2 {
   background-color: #ffffff;
   background-image: url("../images/event-bg.jpg");
   background-position: center bottom;
- 
+
   background-repeat:no-repeat;
   position: relative;
   overflow: hidden;
@@ -316,7 +317,7 @@ h2 {
 }
 
 #countdown li .hours {
-  background-color: #efc94c; 
+  background-color: #efc94c;
   border-top: 1px solid #f2d470;
   border-left: 1px solid #f2d470;
 }
@@ -354,7 +355,7 @@ h2 {
 }
 
 .cart {
-  background-color: #b34534;  
+  background-color: #b34534;
   position: absolute;
   right:-200px;
   top: 37%;
@@ -379,13 +380,13 @@ h2 {
 }
 
 .cart a i {
-  font-size: 30px;  
+  font-size: 30px;
   padding: 20px 12px;
-  background-color: #A64030; 
+  background-color: #A64030;
   margin-right: 3px;
 }
 
- 
+
 
  /*************************
 *******Event CSS******
@@ -438,7 +439,7 @@ h2 {
   position: relative;
 }
 
-.even-control-left, 
+.even-control-left,
 .even-control-right {
   position: absolute;
   font-size: 24px;
@@ -448,7 +449,7 @@ h2 {
 
 .even-control-left {
   right: 3%
-} 
+}
 
 .even-control-right {
   right: 0;
@@ -460,8 +461,8 @@ h2 {
 **************************/
 
 #about {
-  background-color: #75B46E;  
-  position: relative;  
+  background-color: #75B46E;
+  position: relative;
   width: 100%;
   display: flex;
 }
@@ -543,8 +544,8 @@ h2 {
   margin-bottom: 30px;
 }
 
-#twitter-feed .item a, 
-#twitter-feed .item p { 
+#twitter-feed .item a,
+#twitter-feed .item p {
   font-size: 24px;
   font-weight: 300;
   font-family: 'Yanone Kaffeesatz','sans-serif';
@@ -558,7 +559,7 @@ h2 {
   color:#00c3ff;
 }
 
-.twitter-control-left, 
+.twitter-control-left,
 .twitter-control-right {
   position: absolute;
   color: #00c3ff;
@@ -572,7 +573,7 @@ h2 {
 
 .twitter-control-right {
   right:0;
-} 
+}
 
 
 
@@ -621,7 +622,7 @@ h2 {
   margin-right: 0
 }
 
-.sponsor-control-left, 
+.sponsor-control-left,
 .sponsor-control-right {
   color: #FFFFFF;
   font-size: 24px;
@@ -646,7 +647,7 @@ h2 {
 }
 
 #gmap {
-  height:450px;  
+  height:450px;
 }
 
 
@@ -659,7 +660,7 @@ h2 {
   background-image: url("../images/contact-bg.jpg");
   background-position:60% 0;
   background-size:contain;
-  background-repeat:no-repeat;  
+  background-repeat:no-repeat;
   position: relative;
 }
 
@@ -675,16 +676,16 @@ h2 {
 
 #contact h3 {
   text-transform:inherit;
-  color: #373737; 
+  color: #373737;
 }
 
-#contact-section h3 {  
+#contact-section h3 {
   margin-bottom: 25px
 }
 
 #contact address {
-  font-size: 18px;  
-  color: #373737; 
+  font-size: 18px;
+  color: #373737;
 }
 
 .contact-text {
@@ -706,7 +707,7 @@ h2 {
   border-color: #ae750d;
 }
 
-#contact-section input {  
+#contact-section input {
   height: 44px;
 }
 
@@ -754,5 +755,3 @@ h2 {
 #footer a:hover {
   color:#1B7B98
 }
-
-
