--- a/css/style.css
+++ b/css/style.css
@@ -26,3 +26,11 @@
    inset 0px 3px 15px 0px rgba(0,0,0,0.5),
     0px 1px 1px 0px rgba(255,255,255,0.08);
 }
+#sponsor .item li a
+{}
+#sponsor .item li
+{
+  width:35%;
+  height:50px;
+  margin-left:10%;
+}
