--- a/css/main.css
+++ b/css/main.css
@@ -342,7 +342,12 @@ h2 {
 #event-carousel,#event-carousel2 {
   position: relative;
 }
-
+#event-carousel2 ol{
+  font-style: italic;
+  font-weight:300;
+  font-size:19px;
+  color:#fafafa;
+}
 .even-control-left,
 .even-control-right {
   position: absolute;
