--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@
   box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.05),
    inset 0px 3px 15px 0px rgba(0,0,0,0.5),
     0px 1px 1px 0px rgba(255,255,255,0.08);
+		margin:0px;
+		padding:0px;
 }
 #sponsor .item li a
 {}
