--- a/css/main.css
+++ b/css/main.css
@@ -498,7 +498,14 @@ h2 {
   background-repeat:no-repeat;
   position: relative;
 }
-
+#sponsor li{
+  text-align: center;
+  box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.05),
+   inset 0px 3px 15px 0px rgba(0,0,0,0.5),
+    0px 1px 1px 0px rgba(255,255,255,0.08);
+  background-color: #0277bd;
+  color: #e1f5fe!important;
+}
 .light {
   position: absolute;
   right: 0;
