--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
 @import url(https://fonts.googleapis.com/css?family=Bangers);
+.modal{
+	margin-left:10%;
+	margin-top:15%;
+}
+.modal-content{
+	max-width: 80%;
+	max-height: 80%;
+	background-color: #f1f1f1;
+	min-width: 50%;
+	min-height: 50%;
+}
+
+.modal-title{
+	text-align: center;
+}
 .modal-title,.modal-body p{
 	color:#212121;
 }
