--- a/css/main.css
+++ b/css/main.css
@@ -291,7 +291,7 @@ h2 {
   text-transform: uppercase;
 }
 #event,#event2 {
-  background-color: #33888F;
+  background-color: #ffffff;
   background-image: url("../images/performar-bg.jpg");
   background-position: 50% 0;
   background-size: cover;
@@ -305,7 +305,7 @@ h2 {
 }
 
 #event h2,#event2 h2 {
-  color: #FFFFFF;
+  color: #000000;
   font-size: 36px;
   font-weight: 300;
   margin-bottom: 40px;
@@ -565,11 +565,11 @@ h2 {
 **************************/
 
 .contact-section {
-  background-color: #f7ab24;
+  background-color: #ffffff;
   background-image: url("../images/contact-bg.jpg");
   background-position:60% 0;
   background-size:contain;
-  background-repeat:no-repeat;
+  
   position: relative;
 }
 
