--- a/css/style.css
+++ b/css/style.css
@@ -6,16 +6,17 @@
 .modal-content{
 	max-width: 80%;
 	max-height: 80%;
-	background-color: #f1f1f1;
+	background-color: #efebe9;
 	min-width: 50%;
 	min-height: 50%;
 }
 
 .modal-title{
 	text-align: center;
+	font-weight: bold;
 }
-.modal-title,.modal-body p{
-	color:#212121;
+.modal-title,.modal-body ol{
+	color:#101010;
 }
 .modal-body img{
 	max-width: 95%;
@@ -24,6 +25,14 @@
 .modal-header button{
 	color:red;
 	opacity:1.0;
+}
+.modal-footer button{
+	background-color: #e1f5fe;
+	color:#c62828;
+}
+.modal-footer button:hover{
+	background-color: #ffcdd2;
+	color:#1565c0;
 }
 .rule{
 	text-align:center;
