--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: 36px
+  font-size: 40px
 }
 
 .navbar-toggle {
@@ -395,7 +395,7 @@ h2 {
 }
 
 .about-content p {
-  font-size: 17px;
+  font-size: 21px;
   font-family: 'Dosis',sans-serif;
 }
 
@@ -498,8 +498,9 @@ h2 {
   box-shadow: inset 0px 0px 5px 0px rgba(0,0,0,0.05),
    inset 0px 3px 15px 0px rgba(0,0,0,0.5),
     0px 1px 1px 0px rgba(255,255,255,0.08);
-  background-color: #0277bd;
+  background-color: white;
   color: #e1f5fe!important;
+    opacity: 0.6;
 }
 .light {
   position: absolute;
@@ -677,3 +678,5 @@ h2 {
     color: #fff;
     background-color: sienna;
 }
+
+
